--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,5 @@ dependencies = [
     "langchain>=0.3.25",
     "langchain-openai>=0.3.21",
     "openai>=1.84.0",
+    "sentence-transformers>=4.1.0",
 ]
