--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "elasticsearch>=8.0.0,<9.0.0",
     "jupyterlab>=4.4.3",
     "langchain>=0.3.25",
+    "langchain-community>=0.3.25",
     "langchain-openai>=0.3.21",
     "openai>=1.84.0",
     "sentence-transformers>=4.1.0",
+    "tiktoken>=0.9.0",
 ]
